# python-sdk

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .stats.yml  CHANGELOG.md  CI_STATUS.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  FINAL_CI_SUMMARY.md  GEMINI.md  GRPO_ENHANCED_FEATURE_PARITY.md  GRPO_PYTHON_SDK_STATUS.md  HANZO_DEV_GRPO_INTEGRATION.md  HANZO_DEV_README.md  HANZO_DEV_USAGE.md  LICENSE  LINEAR_INTEGRATION.md  LLM.md  Makefile  NODE_COMPATIBILITY.md  PARALLEL_EDITING_GUIDE.md  PEAK_AI_WORKFLOW_GUIDE.md  README.md  RUN_NOW.sh  SECURITY.md  STREAMLINED_WORKFLOW.md  WORKFLOW_GUIDE.md  api.md  demo_gpt5_pro_codex.py  demo_gpt_review.sh  demo_hanzo_dev.py  fix_hanzo_network_imports.py  fix_imports.py  mkdocs.yml  mypy.ini  noxfile.py  publish-packages.sh  pyproject.toml  release-please-config.json  (+21 more)
pkg/hanzo-cli/: README.md  pyproject.toml
pkg/hanzo-cli/hanzo_cli/: __init__.py  auth.py  cli.py
pkg/hanzo-cli/tests/: test_e2e.py
pkg/hanzo-dev/: README.md  pyproject.toml
pkg/hanzo-dev/tests/: test_git_commands.py
pkg/hanzo-flow/: README.md  pyproject.toml
pkg/hanzo-hooks/: pyproject.toml
pkg/hanzo-hooks/hanzo_hooks/: __init__.py  runner.py  types.py
pkg/hanzo-hooks/tests/: test_hooks.py
pkg/hanzo-iam/: README.md  pyproject.toml
pkg/hanzo-iam/hanzo_iam/: __init__.py  async_client.py  client.py  config.py  fastapi.py  models.py
pkg/hanzo-iam/tests/: test_fastapi.py
pkg/hanzo-kms/: README.md  pyproject.toml
pkg/hanzo-kms/hanzo_kms/: __init__.py  __main__.py  async_client.py  cli.py  client.py  models.py
pkg/hanzo-lsp/: pyproject.toml
pkg/hanzo-lsp/hanzo_lsp/: __init__.py  client.py  manager.py  types.py
pkg/hanzo-lsp/tests/: mock_lsp_server.py  test_lsp.py
pkg/hanzo-mcp/: .gitignore  DEVELOPMENT.md  DEVELOPMENT_TOOLS_COMPLETE.md  E2E_DEMO_SUMMARY.md  EXACT_IMPLEMENTATION_COMPLETE.md  HANZO_A2A_PACKAGE.md  HANZO_CLI_PACKAGE.md  HANZO_TOOLS_PACKAGE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_new.md  LOCAL_AI_SWARM_READY.md  MODULAR_ARCHITECTURE.md  Makefile  PYTHON_SDK_MONOREPO_COMPLETE.md  PYTHON_SDK_MONOREPO_STRUCTURE.md  SECURITY_PATCH.md  TOKEN_LIMIT_FIX_SUMMARY.md  check_ci_status.py  demo_exact_tools.py  demo_memory_system.py  install_hanzo_mcp.py  migrate_tests.py  pyproject.toml  pytest_full_output.txt  pytest_output.txt  setup_memory_tests.py  simple_test.py  sitecustomize.py  start_server.py  swarm_test_summary.md  test_complete_system.py  test_exact_tools.py  test_filters.py  test_memory_integration.py  test_memory_settings.py  test_modular_architecture.py  test_size_parsing.py
pkg/hanzo-mcp-client/: pyproject.toml
pkg/hanzo-mcp/docs/: COMPREHENSIVE_DOCUMENTATION.md  SEARCH_GUIDE.md
pkg/hanzo-mcp/examples/: agent_grinding_demo.py  agent_grinding_practical.py  agent_swarm_demo.py  batch_swarm_pattern.py  cli_agents_demo.py  distributed_network_example.py  fix_go_imports_swarm.py  full_swarm_test.py  hanzo_mcp_swarm_integration.py  hanzo_net_demo.py  parallel_edit_demo.py  run_local_agents.py  run_real_model.py  swarm_demo_simple.py  test_local_ai.py  test_local_inference.py  token_counting_demo.py  unified_search_demo.py  working_agent_swarm.py
pkg/hanzo-mcp/hanzo_mcp/: __init__.py  bridge.py  cli.py  cli_enhanced.py  cli_plugin.py  compute_nodes.py  config.py  coordination.py  dev_cli.py  dev_server.py  dev_tools.py  exact_mcp_server.py  exact_tools.py  mcp_server.py  memory_service.py  plugin_interface.py  server.py  types.py  unified_backend.py  zap_server.py
pkg/hanzo-mcp/hanzo_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pkg/hanzo-mcp/scripts/: publish.sh
pkg/hanzo-mcp/test_project_small/: LLM.md  module_000.py  module_001.py  module_002.py  module_003.py  module_004.py  module_005.py  module_006.py  module_007.py  module_008.py  module_009.py
pkg/hanzo-mcp/tests/: __init__.py  benchmark_search.py  benchmark_simple.py  conftest.py  test_agent_tools_ci.py  test_batch_tool_edge_cases.py  test_cli.py  test_cli_agents_consolidated.py  test_cli_tools.py  test_e2e_demo.py  test_e2e_simple.py  test_error_logging.py  test_exact_tools_contracts.py  test_failure_cases.py  test_find_tool_ffind.py  test_find_tool_integration.py  test_find_tool_registration.py  test_git_ingestion.py  test_hanzo_agents_integration.py  test_hanzo_mcp_integration.py  test_hanzo_mcp_local.py  test_hanzo_mcp_simple.py  test_hanzo_network_integration.py  test_integration.py  test_integration.py.skip  test_litellm_warnings.py  test_llm_warnings.py  test_lsp_tool.py  test_manual.py  test_memory_base.py  test_memory_basic.py  test_memory_consolidated.py  test_memory_edge_cases.py  test_memory_namespace.py  test_memory_simple.py  test_memory_tools.py  test_memory_tools_comprehensive.py  test_memory_utils.py  test_new_tools.py  test_no_stubs.py  (+17 more)
pkg/hanzo-mcp/vscode-extension/: package-lock.json  package.json
pkg/hanzo-node/: README.md  pyproject.toml
pkg/hanzo-router.disabled/: README.md  pyproject.toml  router  setup.py
pkg/hanzo-s3/: README.md  pyproject.toml
pkg/hanzo-s3/hanzo_s3/: __init__.py  admin.py
pkg/hanzo-sandbox/: pyproject.toml
pkg/hanzo-sandbox/hanzo_sandbox/: __init__.py  sandbox.py
pkg/hanzo-sandbox/tests/: test_sandbox.py
pkg/hanzo-tasks/: pyproject.toml
pkg/hanzo-tasks/hanzo_tasks/: __init__.py  (+4 more)
pkg/hanzo-tools-auth/: README.md  pyproject.toml
pkg/hanzo-tools-billing/: README.md  pyproject.toml
pkg/hanzo-tools-code/: README.md  pyproject.toml
pkg/hanzo-tools-commerce/: README.md  pyproject.toml
pkg/hanzo-tools-computer/: pyproject.toml
pkg/hanzo-tools-core/: README.md  pyproject.toml
pkg/hanzo-tools-iam/: README.md  pyproject.toml
pkg/hanzo-tools-ide/: README.md  pyproject.toml
pkg/hanzo-tools-ingress/: README.md  pyproject.toml
pkg/hanzo-tools-kms/: README.md  pyproject.toml
pkg/hanzo-tools-llm/: pyproject.toml
pkg/hanzo-tools-mpc/: README.md  pyproject.toml
pkg/hanzo-tools-net/: pyproject.toml
pkg/hanzo-tools-paas/: README.md  pyproject.toml
pkg/hanzo-tools-plan/: pyproject.toml
pkg/hanzo-tools-platform/: README.md  pyproject.toml
(+9786 files in other folders)
