[project]
name = "hanzo-node"
version = "0.1.0"
description = "Hanzo Node - Cross-platform installer for the Hanzo AI node (Rust binary)"
authors = [
    {name = "Hanzo AI", email = "dev@hanzo.ai"},
]
dependencies = [
    "httpx>=0.23.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]
readme = "README.md"
requires-python = ">= 3.10"
keywords = ["hanzo", "node", "ai", "blockchain", "p2p"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]

[project.scripts]
hanzo-node = "hanzo_node.cli:main"

[project.urls]
Homepage = "https://hanzo.ai"
Repository = "https://github.com/hanzoai/python-sdk"
Documentation = "https://docs.hanzo.ai/node"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hanzo_node"]
