[project]
name = "hanzo-router"
version = "1.74.3"
description = "Unified LLM Gateway for Hanzo AI Platform - Call 100+ LLM APIs using the OpenAI format"
authors = [
    {name = "Hanzo AI", email = "dev@hanzo.ai"}
]
license = "MIT"
readme = "README.md"
homepage = "https://hanzo.ai"
repository = "https://github.com/hanzoai/router"
documentation = "https://docs.hanzo.ai/router"
keywords = ["LLM", "AI", "API Gateway", "OpenAI", "Anthropic", "Router", "Hanzo"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8.1,<4.0"

dependencies = [
    "httpx>=0.23.0",
    "openai>=1.68.2",
    "python-dotenv>=0.2.0",
    "tiktoken>=0.7.0",
    "importlib-metadata>=6.8.0",
    "tokenizers",
    "click",
    "jinja2>=3.1.2",
    "aiohttp>=3.10",
    "pydantic>=2.5.0",
    "jsonschema>=4.22.0",
]

[project.scripts]
hanzo-router = "router:run_server"
router = "router:run_server"

[project.urls]
"Bug Tracker" = "https://github.com/hanzoai/router/issues"
"Changelog" = "https://github.com/hanzoai/router/releases"

[project.optional-dependencies]
proxy = [
    "gunicorn>=23.0.0",
    "uvicorn>=0.29.0",
    "uvloop>=0.21.0;sys_platform != 'win32'",
    "fastapi>=0.115.5",
    "backoff",
    "pyyaml>=6.0.1",
    "rq",
    "orjson>=3.9.7",
    "apscheduler>=3.10.4",
    "fastapi-sso>=0.16.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.18",
    "cryptography>=43.0.1",
    "prisma==0.11.0",
    "prometheus-client>=0.20.0",
    "boto3>=1.34.122",
    "mcp>=1.10.0;python_version>='3.10'",
    "router-proxy-extras>=0.2.10",
    "router-enterprise>=0.1.13",
    "rich>=13.7.1",
]

extra_proxy = [
    "prisma==0.11.0",
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.8.0",
    "google-cloud-kms>=2.21.3",
    "resend>=0.8.0",
    "prometheus-client>=0.20.0",
    "boto3>=1.34.122",
    "diskcache>=5.6.1",
]

redis_cache = ["redisvl"]

otel = [
    "opentelemetry-api==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
]

otel_latest = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "router",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["router"]

[tool.hatch.metadata]
# This will use the router package from the main router repository
allow-direct-references = true