[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hanzo-tools-code"
version = "0.1.0"
description = "Code semantic tools for Hanzo AI (HIP-0300)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Hanzo AI Team", email = "ai@hanzo.ai" },
]
keywords = [
    "hanzo",
    "mcp",
    "tools",
    "code",
    "ast",
    "lsp",
    "tree-sitter",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "hanzo-tools-core>=0.1.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
tree-sitter = [
    "tree-sitter>=0.21.0",
    "tree-sitter-languages>=1.10.0",
]
lsp = [
    "pygls>=1.0.0",
]
full = [
    "hanzo-tools-code[tree-sitter,lsp]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.entry-points."hanzo.tools"]
code = "hanzo_tools.code:TOOLS"

[project.urls]
Homepage = "https://github.com/hanzoai/python-sdk"
Documentation = "https://docs.hanzo.ai"
Repository = "https://github.com/hanzoai/python-sdk"

[tool.hatch.build.targets.wheel]
packages = ["hanzo_tools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
