[project]
name = "hanzo-tools-commerce"
version = "0.1.0"
description = "Hanzo Commerce MCP tool -- orders, products, collections, stores, and discounts"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hanzo AI", email = "dev@hanzo.ai" }]
keywords = ["hanzo", "mcp", "commerce", "orders", "products", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "hanzo-tools-core>=0.1.0",
    "hanzo-tools-auth>=0.1.0",
    "httpx>=0.27.0",
]

[project.entry-points."hanzo.tools"]
commerce = "hanzo_tools.commerce:TOOLS"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hanzo_tools"]
