[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hanzo-tools-computer"
version = "0.5.1"
description = "Computer control tools for Hanzo AI - automation, screen recording, activity detection, session compression for Claude (100 images/32MB/2000px limits)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Hanzo AI", email = "dev@hanzo.ai" },
]
keywords = ["hanzo", "ai", "tools", "computer", "automation", "pyautogui", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "hanzo-tools>=0.3.0",
    "pyautogui>=0.9.54",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "mcp>=1.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.entry-points."hanzo.tools"]
computer = "hanzo_tools.computer:TOOLS"

[tool.hatch.build.targets.wheel]
packages = ["hanzo_tools"]
