[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hanzo-tools-ide"
version = "0.1.0"
description = "IDE integration tool for VS Code, JetBrains, and LSP-compatible editors"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hanzo Industries Inc", email = "dev@hanzo.ai" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["mcp", "ide", "vscode", "jetbrains", "lsp", "editor"]
dependencies = [
    "hanzo-tools-core>=0.1.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
lsp = ["pygls>=1.3.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
"Homepage" = "https://github.com/hanzoai/python-sdk"

[project.entry-points."hanzo.tools"]
ide = "hanzo_tools.ide:TOOLS"

[tool.setuptools.packages.find]
where = ["."]
include = ["hanzo_tools*"]

[tool.setuptools.package-data]
hanzo_tools = ["py.typed"]
