[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hanzo-tools-llm"
version = "0.1.0"
description = "LLM provider tools - unified interface to 100+ providers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hanzo Industries Inc", email = "dev@hanzo.ai" }]
keywords = ["hanzo", "tools", "llm", "openai", "anthropic", "mcp", "ai"]
dependencies = [
    "mcp>=1.25.0",
    "fastmcp>=2.14.1",
    "pydantic>=2.12.5",
    "litellm>=1.80.0",
    "openai>=1.82.0",
]

[project.entry-points."hanzo.tools"]
llm = "hanzo_tools.llm:TOOLS"

[tool.setuptools.packages.find]
where = ["."]
include = ["hanzo_tools*"]
